tests/compile-fail/invalid_offset.stderr
error: invalid component: hour was 26
 --> $WORKSPACE/tests/compile-fail/invalid_offset.rs
  |
  |     let _ = offset!(+26);
  |                      ^^

error: invalid component: minute was 60
 --> $WORKSPACE/tests/compile-fail/invalid_offset.rs
  |
  |     let _ = offset!(+0:60);
  |                        ^^

error: invalid component: second was 60
 --> $WORKSPACE/tests/compile-fail/invalid_offset.rs
  |
  |     let _ = offset!(+0:00:60);
  |                           ^^

error: unexpected token: 0
 --> $WORKSPACE/tests/compile-fail/invalid_offset.rs
  |
  |     let _ = offset!(0);
  |                     ^

error: missing component: sign
 --> $WORKSPACE/tests/compile-fail/invalid_offset.rs
  |
  |     let _ = offset!();
  |             ^^^^^^^^^
  |
  = note: this error originates in the macro `offset` (in Nightly builds, run with -Z macro-backtrace for more info)

error: invalid component: hour was 0a
 --> $WORKSPACE/tests/compile-fail/invalid_offset.rs
  |
  |     let _ = offset!(+0a);
  |                      ^^

error: invalid component: minute was 0a
 --> $WORKSPACE/tests/compile-fail/invalid_offset.rs
  |
  |     let _ = offset!(+0:0a);
  |                        ^^

error: invalid component: second was 0a
 --> $WORKSPACE/tests/compile-fail/invalid_offset.rs
  |
  |     let _ = offset!(+0:00:0a);
  |                           ^^
